prevent flicker

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,3 +6,5 @@
 body{
     overflow: hidden;
 }
+
+[v-cloak] {display: none}
